--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=aeroparker-coding-challenge
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/aeroparker
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/aeroparker?createDatabaseIfNotExist=true
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
